fix: use constructor injection and other fixes